# bender-delivery-zones

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
config/: audit.yml  bands.yml  boundary-candidates.yml  demand.yml  service-area.yml  service-trim.yml  severny-address-provenance.yml  sources.yml  street-names-ru.yml  taxi-calibration.yml  zoning.yml
data/manifests/: osm_moldova-20260723T072259Z.json
docs/: app.js  data-sources.md  index.html  licensing.md  styles.css
docs/data/: boundary-questions.geojson  buildings.geojson  candidate-service-area.geojson  delivery-exceptions.csv  delivery-exceptions.geojson  delivery-unit-points.geojson  delivery-units.csv  demand-summary.json  disputed-addresses.csv  disputed-addresses.geojson  disputed-addresses.json  k-candidates.geojson  (+31 more)
schemas/: address-zone-lookup.schema.json  order-pricing-snapshot.schema.json  zone-tariff-matrix.schema.json
scripts/: audit_districts.py  audit_osm.py  build_demand_audit.py  build_osrm.sh  build_service_area.py  build_service_trim.py  build_tariff_bands.py  build_zone_candidates.py  download_osm.py  osrm_smoke.py  setup_osrm.sh  severny_candidates.py  verify_provenance.py
tests/: conftest.py  test_address.py  test_bands.py  test_demand.py  test_districts.py  test_download.py  test_extract.py  test_gitignore.py  test_manifest.py  test_metrics.py  test_normalize.py  test_owner_rules.py  test_product_contracts.py  test_relations.py  test_report.py  test_service_area.py  test_service_trim.py  test_severny.py  test_zoning.py
(+44 files in other folders)
